[gd_scene load_steps=9 format=2]

[ext_resource path="res://worlds/flowerCity/icon.png" type="Texture" id=1]
[ext_resource path="res://menu/worldButton/worldButton.gd" type="Script" id=2]
[ext_resource path="res://fonts/abaddon/Abaddon Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menu/worldButton/unlock.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 114, 70 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 38, 70 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hovered"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 38, 70 ), Rect2( 38, 0, 38, 70 ), Rect2( 76, 0, 38, 70 ) ]
}

[node name="worldButtton" type="Control"]
anchor_right = 0.187
anchor_bottom = 0.32
margin_right = 0.511993
margin_bottom = -1.52588e-05
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 6
size_flags_vertical = 5
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -48.0
margin_right = 96.0
margin_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Robot City"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="button" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_right = -64.0
margin_bottom = -48.0
rect_min_size = Vector2( 72, 144 )
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="NinePatchRect" type="NinePatchRect" parent="button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = -3.0
texture = SubResource( 4 )
region_rect = Rect2( 0, 0, 38, 70 )

[node name="lock" type="TextureRect" parent="button"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = 13.0
margin_right = 18.0
margin_bottom = 51.0
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../button")
anims/RESET = SubResource( 1 )
anims/hovered = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
